--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@
     .header {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-    border: 1px solid #ffffff;
+    border: 0px;
+    border-bottom: 1px solid #ffffff;
     background-color: #000000;
     -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
