--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@
     }
     
     h4 {
-        font-size: 10px;
+        font-size: 28px;
+        color: whitesmoke;
+        margin: 0;
     }
     
     h2,
