--- a/home.css
+++ b/home.css
@@ -27,9 +27,18 @@
     }
     
     h4 {
-        font-size: 28px;
-        color: whitesmoke;
-        margin: 0;
+        font-size: 38px;
+        color: white;
+        margin: 0px;
+    }
+
+    .wired {
+        width: 400px;
+        height: 400px;
+        text-align: right;
+        position: absolute;
+        right: 0px;
+        margin: 0px;
     }
     
     h2,
