--- a/home.css
+++ b/home.css
@@ -1,118 +1,128 @@
 * {
     box-sizing: border-box;
-    }
-    body {
+}
+
+body {
     font-family: "Montserrat", sans-serif;
     line-height: 1.6;
     margin: 0;
     background-color: #1b1b1b;
     min-height: 100vh;
-    }
-    ul {
+}
+
+ul {
     margin: 0;
     padding: 0;
     list-style: none;
-    }
-    
-    .content {
-        width: 100;
-        background-color: transparent;
-        margin: 50px;
-        color: white;
-    }
-    
-    h1 {
-        font-size: 90px;
-        margin: 0px;
-    }
-    
-    h4 {
-        font-size: 38px;
-        color: white;
-        margin: 0px;
-    }
+}
 
-    .wired {
-        width: 400px;
-        height: 400px;
-        text-align: right;
-        position: absolute;
-        right: 0px;
-        margin: 0px;
-    }
-    
-    h2,
-    h3,
-    a {
-    color: rgb(255, 255, 255);
-    }
-    
-    a {
-    text-decoration: none;
-    }
-    
-    .logo {
+.content {
+    width: 100%;
+    background-color: transparent;
+    margin: 50px;
+    color: white;
+}
+
+.container {
+    display: flex;
+    align-items: flex-start;
+}
+
+.text {
+    flex: 1;
+}
+
+.img-container {
+    flex: 1;
+    text-align: right;
+}
+
+h1 {
+    font-size: 90px;
+    margin: 0;
+}
+
+h4 {
+    font-size: 38px;
+    margin: 0;
+}
+
+.button-container {
+    background-color: #888888;
+    padding: 20px;
+}
+
+.button {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+    background-color: #444444;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #666666;
+}
+
+.header {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    border: 0;
+    border-bottom: 1px solid #ffffff;
+    background-color: #000000;
+    -webkit-box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.75);
+    border-radius: 5px;
+}
+
+.logo {
     margin: 0;
     font-size: 1.45em;
-    }
-    
-    .main-nav {
+}
+
+.main-nav {
     margin-top: 5px;
-    }
-    .logo a,
-    .main-nav a {
+}
+
+.logo a,
+.main-nav a {
     padding: 10px 15px;
     text-transform: uppercase;
     text-align: center;
     display: block;
-    }
-    
-    .main-nav a {
-        color: #ffffff;
-        font-size: 0.99em;
-    }
-    .main-nav a:hover {
+}
+
+.main-nav a {
     color: #ffffff;
-    }
-    
-    .header {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    border: 0px;
-    border-bottom: 1px solid #ffffff;
-    background-color: #000000;
-    -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    }
-    
-    /* ================================= 
-    Media Queries
-    ==================================== */
-    
-    @media (min-width: 769px) {
+    font-size: 0.99em;
+}
+
+.main-nav a:hover {
+    color: #ffffff;
+}
+
+@media (min-width: 769px) {
     .header,
     .main-nav {
         display: flex;
     }
+
     .header {
         flex-direction: column;
         align-items: center;
-        .header {
         width: 80%;
         margin: 0 auto;
         max-width: 1150px;
-        }
     }
-    }
-    
-    @media (min-width: 1025px) {
+}
+
+@media (min-width: 1025px) {
     .header {
         flex-direction: row;
         justify-content: space-between;
     }
-    }
-    
+}
