--- a/home.css
+++ b/home.css
@@ -52,7 +52,7 @@ h4 {
     padding: 20px;
 }
 
-.button {
+button {
     width: 100%;
     height: 100px;
     margin-bottom: 10px;
@@ -63,7 +63,7 @@ h4 {
     transition: background-color 0.3s;
 }
 
-.button:hover {
+button:hover {
     background-color: #666666;
 }
 
